--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "fetch": "^1.1.0",
     "gh-pages": "^5.0.0",
     "hooks": "^0.3.2",
     "react": "^18.2.0",
