--- a/myProjects.json
+++ b/myProjects.json
@@ -1,26 +1,30 @@
 [
     {
         "name": "currency-calculator",
-        "discryption": "A simple application for currency conversion",
+        "description": "A simple application for currency conversion",
         "demo": "https://mateusszzp.github.io/currency-calculator-react/",
-        "code": "https://github.com/Mateusszzp/currency-calculator-react"
+        "code": "https://github.com/Mateusszzp/currency-calculator-react",
+        "id": 1
     },
     {
-        "name": "to-do-list",
-        "discryption": "A simple application for listing tasks, marking their completion and modification.",
-        "demo": "https://mateusszzp.github.io/To-do-list/",
-        "code": "https://github.com/Mateusszzp/To-do-list"
+        "name": "todo-list-react",
+        "description": "A simple application for listing tasks, marking their completion and modification.",
+        "demo": "https://mateusszzp.github.io/todo-list-react/",
+        "code": "https://github.com/Mateusszzp/todo-list-react",
+        "id": 2
     },
     {
         "name": "movie-browser",
-        "discryption": "This Movie Browser was created as the final project of the Frontend Developer Course at Youcode course as a result of our teamwork. Design was based on Figma graphic and API data provided by the (https://www.themoviedb.org/). Site will allow you to use the database of movies and people provided by external API to get acquainted with trending movies, details and people involved in their creation.",
-        "demo:": "https://kubatuta.github.io/Movie-Browser/",
-        "code": "https://github.com/Mateusszzp/Movie-Browser"
+        "description": "This Movie Browser was created as the final project of the Frontend Developer Course at Youcode course as a result of our teamwork. ",
+        "demo": "https://kubatuta.github.io/Movie-Browser/",
+        "code": "https://github.com/Mateusszzp/Movie-Browser",
+        "id": 3
     },
     {
         "name": "home-page",
-        "discryption": "rozpoczołem prace na mojej stronie opisującej mój flow",
+        "description": "rozpoczołem prace na mojej stronie opisującej mój flow",
         "demo": "jest w trakcie przygotowania",
-        "code": "w trakcie przygotowania"
+        "code": "w trakcie przygotowania",
+        "id": 4
     }
 ]
